--- a/views/invoices.erb
+++ b/views/invoices.erb
@@ -66,27 +66,15 @@
   <table id="elements_table" class="table table-striped">
      <thead class="table-header">
        <tr>
-         <th class="table-header-title" scope="col" style="width:10%">
-            <%= t.invoices.table.date %>
-         </th>
-         <th class="table-header-title" scope="col" style="width:10%">
-           <%= t.invoices.table.number %>
-         </th>
-         <th class="table-header-title" scope="col" style="width:20%">
-            <%= t.invoices.table.customer %>
-         </th>
-         <th class="table-header-title" scope="col" style="width:30%">
-            <%= t.invoices.table.concept %>
-         </th>
-         <th class="table-header-title" scope="col" style="width:10%">
-            <%= t.invoices.table.total %>
-         </th>
-         <th class="table-header-title" scope="col" style="width:10%">
-            <%= t.invoices.table.invoice_status %>
-         </th>        
-         <th class="table-header-title" scope="col" style="width:10%">
-            <%= t.invoices.table.invoice_type %>
-         </th>                                             
+         <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.date %></th>
+         <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.number %></th>
+         <th class="table-header-title" scope="col" style="width:20%"><%= t.invoices.table.customer %></th>
+         <th class="table-header-title" scope="col" style="width:20%"><%= t.invoices.table.concept %></th>
+         <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.total %></th>
+         <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.invoice_status %></th>        
+         <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.invoice_type %></th>
+         <th class="table-header-title text-center" scope="col" style="width:5%"><%= t.invoices.table.invoice_sent %></th>
+         <th class="table-header-title" scope="col" style="width: 5%">&nbsp;</th>
        </tr>
      </thead>
      <tbody id="elements_tbody" class="table-tbody">
@@ -126,7 +114,11 @@
         <%% } else if (entity.invoice_type == 'payment') { %>
           <span class="label label-danger"><%= t.invoices.type.payment %></span>
         <%% } %>  	
-      </td>                    
+      </td>      
+      <td class="table-cell text-center element-navigation-detail" rel="<%%=index%>">
+        <%%= entity.invoice_sent ? '<i class="fa fa-check"></i>' : '<i class="fa fa-times"></i>'  %>      
+      </td>    
+      <td class="table-cell element-navigation-detail" rel="<%%=index%>"></td>          
     </tr>
 </script>
 
@@ -157,8 +149,7 @@
                   <%% } %>   
                   <a href="/admin/invoices/customer-invoices/<%%=entity.id%>.pdf" 
                      class="btn btn-primary" role="button" target="blank"><i class="fa fa-print"></i>&nbsp; <%= t.invoices.form.print %></a> 
-                  <a href="#" 
-                     class="btn btn-default" role="button"><i class="fa fa-envelope-o"></i>&nbsp;  <%= t.invoices.form.send_invoice %></a> 
+                  <button id="send_invoice_btn" class="btn btn-default" role="button"><i class="fa fa-envelope-o"></i>&nbsp;  <%= t.invoices.form.send_invoice %></button> 
                   </div>                       
                 </h3>
               </div>     
@@ -179,7 +170,7 @@
                              </select>
                            </div>
                         </div> 
-                        <div id="invoice_serie_container" class="form-group" <%% if (entity && entity.invoice_type == 'payment') {%>style="display:none"<%%}%>>
+                        <div class="form-group">
                            <label class="col-md-12"><%= t.invoices.form.serie.label %></label>
                            <div class="col-md-12">
                              <select id="serie" name="serie" class="form-control"
@@ -190,17 +181,7 @@
                              </select>                            
                            </div>
                         </div>
-                        <div id="payment_serie_container" class="form-group" <%% if (!(entity && entity.invoice_type == 'payment')) {%>style="display:none"<%%}%>>
-                           <label class="col-md-12"><%= t.invoices.form.serie.label %></label>
-                           <div class="col-md-12">
-                             <select id="serie" name="serie" class="form-control"
-                               <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>>
-                               <% @invoice_payment_series.each do |serie| %>
-                                 <option value="<%=serie%>" <%% if (entity && entity.serie == '<%=serie%>') { %>selected<%%}%>><%=serie%></option>
-                               <% end %>
-                             </select>                            
-                           </div>
-                        </div>                                              
+                                          
 	                      <div class="form-group">
 	                         <label class="col-md-12"><%= t.invoices.form.date.label %></label>
 	                         <div class="col-md-12">
@@ -299,16 +280,18 @@
 	                      </div>                      
                       </div>
                       <%% } %>
-	                  <div class="col-md-12">
-	                        <%% if (entity) { %>
-                            <%% if (entity.invoice_status == 'draft') { %>
-                            <hr>
-	                          <input type="button" class="pull-right btn btn-sm btn-primary update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
-                            <%% } %>
-	                        <%% } else { %>
-                            <hr>
-	                          <input type="button" class="pull-right btn btn-sm btn-primary create-entity-button action-button entity-management-button" value="<%=t.entitymanagement.create%>"/>
-	                        <%% } %>
+                      <div class="form-group">
+	                        <div class="col-md-12">
+  	                        <%% if (entity) { %>
+                              <%% if (entity.invoice_status == 'draft') { %>
+                              <hr>
+  	                          <input type="button" class="pull-right btn btn-sm btn-primary update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                              <%% } %>
+  	                        <%% } else { %>
+                              <hr>
+  	                          <input type="button" class="pull-right btn btn-sm btn-primary create-entity-button action-button entity-management-button" value="<%=t.entitymanagement.create%>"/>
+  	                        <%% } %>
+                          </div>
                       </div>
                   </form>
                   <br><br>
@@ -317,6 +300,7 @@
           </div>
         </div>
         <%% if (entity) { %>
+        <!-- Lines -->
         <div class="row">
           <div class="col-sm-12 col-md-10 col-md-offset-1">
             <div class="block ">
@@ -384,6 +368,76 @@
             </div>
           </div>
         </div>  
+
+        <!-- Notes -->
+
+        <div class="row">
+          <div class="col-sm-12 col-md-10 col-md-offset-1">
+            <div class="block ">
+              <div class="block-header bg-gray-lighter">
+                <h3 class="block-title"><%= t.invoices.form.notes.group %></h3>
+              </div>
+              <div class="block-content">
+                  <form name="element" class="form-horizontal" method="POST" autocomplete="off">
+                      <%% if (entity) { %>
+                      <input type="hidden" name="id" value="<%%=entity.id%>"/>
+                      <%% } %>
+                      <div class="form-group">
+                         <label class="col-md-3"><%= t.invoices.form.notes.label %></label>
+                         <div class="col-md-12">
+                           <textarea id="notes" name="notes" class="form-control" rows="10" <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>><%%=entity.notes%></textarea>
+                         </div>
+                      </div>                             
+                      <div class="form-group">
+                        <div class="col-md-12">
+                          <input type="button" class="pull-right btn btn-sm btn-primary update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                        </div>
+                      </div>     
+                  </form>    
+              </div>
+            </div>
+          </div>    
+        </div>          
+
+        <!-- Notifications -->
+        
+        <div class="row">
+          <div class="col-sm-12 col-md-10 col-md-offset-1">
+            <div class="block ">
+              <div class="block-header bg-gray-lighter">
+                <h3 class="block-title"><%= t.invoices.form.notifications.title %></h3>
+              </div>
+              <div class="block-content">
+                <table class="table">
+                  <tbody>
+                    <tr>
+                      <td class="table-cell" col="scope" style="width: 20%"><strong><%=t.invoices.form.notifications.table.sent%></strong></td>
+                      <td class="table-cell"><%%= entity.invoice_sent ? '<i class="fa fa-check"></i>' : '<i class="fa fa-times"></i>'  %></td>
+                    </tr>
+                    <tr>
+                      <td class="table-cell"><strong><%=t.invoices.form.notifications.table.sent_date%></strong></td>
+                      <td class="table-cell"><%%= entity.invoice_sent_date ? entity.invoice_sent_date.toString('yyyy-MM-dd HH:mm') : ''%></td>
+                    </tr>
+                  </tbody>
+                </table>        
+              </div>
+            </div>
+          </div>
+        </div>           
+
+        <!-- Activity -->
+
+        <div class="row">
+          <div class="col-sm-12 col-md-10 col-md-offset-1">
+            <div class="block">
+              <div class="block-header bg-gray-lighter">
+                  <h3 class="block-title">Actividad</h3>
+              </div>
+              <div id="newsfeed_container" class="block-content block-content-full">
+              </div>
+            </div>
+          </div>
+        </div>             
         <%% } %>    
        
 
